# Aristotle

./: PackageDocs_README.md  README.md  member-github.txt
Module Documentations/: ignite_rag_README.md
SystemCode/: pyproject.toml
SystemCode/system/: .dockerignore  test_codebase_parser.py
SystemCode/system/.index/: faiss_index  meta.json
SystemCode/system/eval/: Modelfile_llama3_8b-instruct-8k  eval_progress_with_facts.csv  eval_progress_without_facts.csv  evaluate_rag.py
SystemCode/system/src/aristotle/: project_config.py
SystemCode/system/test_files/: 1.py
SystemCode/system/test_files/two/: 2.py
SystemCode/ui/: README.md  package.json
SystemCode/ui/src/: extension.ts
Videos/: Videos.txt
system/: .env.example  .gitignore  Dockerfile  TODO.txt  loaded_codebases.json  main_docs.py  main_git.py  main_graph.py  main_load.py  pyproject.toml  ragas_results.csv
system/eval/: evaluate_csv.py  evaluate_llm.py
system/src/aristotle/agent/: __init__.py  agent.py  databases.py  load_tools.py  loaded_codebases.py  search_tools.py
system/src/aristotle/graph/: graph_database.py  triplets_display.py
system/src/aristotle/graph/parser/: __init__.py  ast_traverser.py  codebase_parser.py  node.py  parser_settings.py  relationship.py  type_inferrer.py
system/src/aristotle/repository_loader/: git_integration.py
system/src/aristotle/vector/: __init__.py  chunk.py  documentations_database.py
system/src/server/: app.py  request_types.py
ui/: CHANGELOG.md  pnpm-lock.yaml
ui/src/: global.ts  request.ts
ui/src/handlers/: chat.ts
ui/src/utils/: state.ts
(+10 files in other folders)
